# PIWIPE

./: .gitignore  CMakeLists.txt  README.md  README_EN.md  backup-manager.bat  backup-project.bat  backup-wipelogs.bat  build-gui-simple.bat  build-gui.bat  check-sdk.bat  convert_png_to_ico.ps1  convert_png_to_ico_v2.ps1  create_disk_icon.ps1  create_icon.ps1  create_simple_icon.bat  create_valid_ico.ps1  daily-backup.bat  form_data.txt  git-backup.bat  install-sdk.bat  install-sdk.ps1  install-windows-sdk-detailed.bat  install-windows-sdk.ps1  report_template.txt  test-icon-debug.ps1  test-icon.bat  version-manager.bat
reports/: 0401a105a1edb9abe71f_06112025_161240.html  0401a105a1edb9abe71f_06112025_172723.html  0401a105a1edb9abe71f_06112025_172816.html  RND070B_06112025_153026.html  RND0A3F_06112025_153238.html  RND1223_06112025_163034.html  RND3377_06112025_154028.html  RND3379_06112025_155334.html  RND362F_06112025_154239.html  RND3AE4_06112025_153251.html  RND3DF8_06112025_161633.html  RND4ABB_06112025_153044.html  RND5FF8_06112025_162526.html  RND7F68_06112025_153519.html  RND9204_06112025_154936.html  RND9B8E_06112025_155717.html  RNDAB42_06112025_162756.html  RNDB2CB_06112025_155407.html  RNDC046_06112025_154104.html  RNDC69D_06112025_155055.html  RNDD300_06112025_171253.html  RNDE320_06112025_160831.html  RNDF02B_06112025_160518.html
src/: main_gui.cpp  piwiper-gui.manifest  piwiper.rc  piwiper_resource.h  version.h  version.rc  version.res
winpe/: startnet.cmd
